# cragents

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml  docs.yml  release.yml
cragents/: __init__.py  _types.py  _utils.py  _version.py
example/: README.md  _tools.py  _types.py  _utils.py  agent.py  graph.py
tests/: test_.py  test_agent.py  test_grammar.py  test_json_schema.py
website/: README.md  _build.ts  _config.ts  deno.json  main.js  styles.css
website/_includes/: layout.vto
