[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cragents"
description = "Limit reasoning output."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.2.1",
]

[tool.setuptools.dynamic]
version = { attr = "cragents._version.__version__" }
